<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.study.java</groupId>
    <artifactId>com.study.java</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <description>parent pom for the java study</description>

    <modules>
        <module>annotations</module>
        <module>guava</module>
        <module>java8</module>
        <module>type-safe</module>
        <module>jvm</module>
        <module>thrift</module>
        <module>thrift-idl</module>
        <module>consistent_hash</module>
        <module>easy-client</module>
        <module>metrics</module>
        <module>networking</module>
        <module>direct-memory</module>
        <module>zookeeper</module>
        <module>TheArtOfJavaConcurrencyProgramming</module>
        <module>NumberGame</module>
        <module>codis</module>
<!--        <module>hystrix</module>-->
        <module>design_pattern</module>
        <module>producer-consumer</module>
        <module>distribute-architecture</module>
        <module>netty-the-definitive-guide</module>
        <module>netty-in-action</module>
        <module>kafka-test</module>
        <module>flink</module>
        <module>service-loader</module>
        <module>concurrent-tools</module>
        <module>reactor</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <lombok.version>1.18.26</lombok.version>
        <flink.version>1.6.2</flink.version>
        <testng.version>6.1.1</testng.version>
        <commons-io.version>2.4</commons-io.version>
        <gson.version>2.6.2</gson.version>
        <org.slf4j.version>1.7.5</org.slf4j.version>
        <commons-lang.version>2.6</commons-lang.version>
        <testng.version>6.1.1</testng.version>
        <jackson.version>1.9.4</jackson.version>
        <mongo-java-driver.version>2.12.3</mongo-java-driver.version>
        <javax.mail.version>1.4.5</javax.mail.version>
        <alibaba.fastjson.version>1.1.24</alibaba.fastjson.version>
        <tomcat-jdbc.version>8.0.22</tomcat-jdbc.version>
        <mysql-connector-java.version>5.1.35</mysql-connector-java.version>
        <commons-dbcp2.version>2.0</commons-dbcp2.version>
        <jedis.version>2.7.2</jedis.version>
        <mail.version>1.4.5</mail.version>
        <joda-time.version>2.8</joda-time.version>
        <httpclient.version>4.5</httpclient.version>
        <httpclient-cache.version>4.5</httpclient-cache.version>
        <httpmime.version>4.2</httpmime.version>
        <kafka.version>0.8.2.1</kafka.version>
        <jetty.version>8.1.14.v20131031</jetty.version>
        <zionpool.version>1.0-SNAPSHOT</zionpool.version>
        <push-channel.version>1.0-SNAPSHOT</push-channel.version>
        <serving-metrics.version>0.1-SNAPSHOT</serving-metrics.version>
        <mongo-java-driver.version>3.2.0</mongo-java-driver.version>
        <commons-codec.version>1.10</commons-codec.version>
        <commons-lang3.version>3.4</commons-lang3.version>
        <commons-pool2.version>2.2</commons-pool2.version>
        <javax-servlet.version>3.1.0</javax-servlet.version>
        <guava.version>19.0</guava.version>
        <thrift.version>0.9.3</thrift.version>
        <maven-thrift-plugin.version>0.1.11</maven-thrift-plugin.version>
        <nifty-core.version>0.20.0</nifty-core.version>
        <log4j.log4j.version>1.2.16</log4j.log4j.version>
        <zookeeper.version>3.4.10</zookeeper.version>
        <typesafe.config.version>1.3.1</typesafe.config.version>
        <io.codis.jodis.jodis.version>0.3.0</io.codis.jodis.jodis.version>
        <com.esotericsoftware.kryo.version>3.0.3</com.esotericsoftware.kryo.version>
        <redis.clients.jedis.version>2.8.0</redis.clients.jedis.version>
        <zkclient.version>0.1</zkclient.version>
        <curator.version>4.0.0</curator.version>
        <hystrix-core.version>1.5.13</hystrix-core.version>
        <netty.version>4.0.36.Final</netty.version>
        <kafka.vesion>0.10.2.2</kafka.vesion>
        <junit.version>4.13-beta-1</junit.version>
    </properties>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->



        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>aopalliance</groupId>
            <artifactId>aopalliance</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>4.3.8.RELEASE</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/junit/junit -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka_2.10</artifactId>
                <version>${kafka.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
            <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-recipes -->
            <dependency>
                <groupId>org.apache.curator</groupId>
                <artifactId>curator-recipes</artifactId>
                <version>${curator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.curator</groupId>
                <artifactId>curator-framework</artifactId>
                <version>${curator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.curator</groupId>
                <artifactId>curator-test</artifactId>
                <version>${curator.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.github.sgroschupf/zkclient -->
            <dependency>
                <groupId>com.github.sgroschupf</groupId>
                <artifactId>zkclient</artifactId>
                <version>${zkclient.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${log4j.log4j.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
            <dependency>
                <groupId>org.apache.zookeeper</groupId>
                <artifactId>zookeeper</artifactId>
                <version>${zookeeper.version}</version>
            </dependency>
            <dependency>
                <groupId>com.typesafe</groupId>
                <artifactId>config</artifactId>
                <version>${typesafe.config.version}</version>
            </dependency>
            <dependency>
                <groupId>io.codis.jodis</groupId>
                <artifactId>jodis</artifactId>
                <version>${io.codis.jodis.jodis.version}</version>
            </dependency>
            <dependency>
                <groupId>com.esotericsoftware</groupId>
                <artifactId>kryo</artifactId>
                <version>${com.esotericsoftware.kryo.version}</version>
            </dependency>
            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${redis.clients.jedis.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${alibaba.fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.netflix.hystrix/hystrix-core -->
            <dependency>
                <groupId>com.netflix.hystrix</groupId>
                <artifactId>hystrix-core</artifactId>
                <version>${hystrix-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-java</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-streaming-java_2.11</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-clients_2.11</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-gelly -->
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-gelly_2.11</artifactId>
                <version>${flink.version}</version>
            </dependency>


        </dependencies>

    </dependencyManagement>



    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>3.0.0</version>-->
<!--                <configuration>-->
<!--                    &lt;!&ndash;Extra memory to prevent jvm crash during heavy Integration/unit test with newer lombok and jdk8&ndash;&gt;-->
<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
<!--                </configuration>-->
<!--            </plugin>-->
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>a1</id>
            <url>http://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

</project>